y.output
Terminals which are not used

   PUNCT
   PERCENTAGE


Grammar

    0 $accept: prog $end

    1 prog: translation_unit
    2     | prog translation_unit

    3 translation_unit: function_definition
    4                 | declaration

    5 function_definition: type_specifier declarator declaration_list_opt compound_statement

    6 declaration_list_opt: declaration_list
    7                     | /* empty */

    8 declaration_list: declaration
    9                 | declaration_list declaration

   10 primary_expression: ID
   11                   | constants
   12                   | STRING_LITERAL
   13                   | LPAREN expression RPAREN

   14 STRING_LITERAL: STRNGLTRL

   15 constants: INT_CONSTANT
   16          | CHAR_CONSTANT

   17 INT_CONSTANT: INTCONSTANT

   18 CHAR_CONSTANT: CHARCONSTANT

   19 postfix_expression: primary_expression
   20                   | postfix_expression LBRACKET expression RBRACKET
   21                   | postfix_expression LPAREN argument_expression_list_opt RPAREN
   22                   | postfix_expression POINT ID

   23 argument_expression_list_opt: argument_expression_list
   24                             | /* empty */

   25 argument_expression_list: assignment_expression
   26                         | argument_expression_list COMMA assignment_expression

   27 unary_expression: postfix_expression
   28                 | unary_operator unary_expression

   29 unary_operator: UAND
   30               | MULT
   31               | PLUS
   32               | MINUS
   33               | NOT

   34 multiplicative_expression: unary_expression
   35                          | multiplicative_expression MULT unary_expression
   36                          | multiplicative_expression DIV unary_expression

   37 additive_expression: multiplicative_expression
   38                    | additive_expression PLUS multiplicative_expression
   39                    | additive_expression MINUS multiplicative_expression

   40 relational_expression: additive_expression
   41                      | relational_expression LT additive_expression
   42                      | relational_expression GT additive_expression
   43                      | relational_expression LE additive_expression
   44                      | relational_expression GE additive_expression

   45 equality_expression: relational_expression
   46                    | equality_expression EQ relational_expression
   47                    | equality_expression NEQ relational_expression

   48 logical_and_expression: equality_expression
   49                       | logical_and_expression AND equality_expression

   50 logical_or_expression: logical_and_expression
   51                      | logical_or_expression OR logical_and_expression

   52 conditional_expression: logical_or_expression
   53                       | logical_or_expression QUESTION expression COLON conditional_expression

   54 assignment_expression: conditional_expression
   55                      | unary_expression ASSIGN assignment_expression

   56 expression: assignment_expression

   57 declaration: type_specifier init_declarator SEMICOLON

   58 init_declarator: declarator
   59                | declarator ASSIGN initialiser

   60 type_specifier: INT
   61               | CHAR
   62               | VOID

   63 declarator: pointer_opt direct_declarator

   64 pointer_opt: MULT
   65            | /* empty */

   66 direct_declarator: ID
   67                  | ID LBRACKET INT_CONSTANT RBRACKET
   68                  | ID LPAREN parameter_list_opt RPAREN

   69 parameter_list_opt: parameter_list
   70                   | /* empty */

   71 parameter_list: parameter_declaration
   72               | parameter_list COMMA parameter_declaration

   73 parameter_declaration: type_specifier pointer_opt ID_opt

   74 ID_opt: ID
   75       | /* empty */

   76 ID: IDENTIFIER

   77 initialiser: assignment_expression

   78 statement: compound_statement
   79          | expression_statement
   80          | selection_statement
   81          | iteration_statement
   82          | jump_statement

   83 compound_statement: LBRACE block_item_list_opt RBRACE

   84 block_item_list_opt: block_item_list
   85                    | /* empty */

   86 block_item_list: block_item
   87                | block_item_list block_item

   88 block_item: declaration
   89           | statement

   90 expression_statement: expression_opt SEMICOLON

   91 selection_statement: IF LPAREN expression RPAREN statement
   92                    | IF LPAREN expression RPAREN statement ELSE statement

   93 iteration_statement: FOR LPAREN expression_opt SEMICOLON expression_opt SEMICOLON expression_opt RPAREN statement

   94 jump_statement: RETURN expression_opt SEMICOLON

   95 expression_opt: expression
   96               | /* empty */


Terminals, with rules where they appear

$end (0) 0
error (256)
INT (258) 60
CHAR (259) 61
VOID (260) 62
IF (261) 91 92
ELSE (262) 92
FOR (263) 93
RETURN (264) 94
IDENTIFIER (265) 76
PUNCT (266)
OR (267) 51
AND (268) 49
LE (269) 43
GE (270) 44
EQ (271) 46
NEQ (272) 47
POINT (273) 22
ASSIGN (274) 55 59
SEMICOLON (275) 57 90 93 94
LPAREN (276) 13 21 68 91 92 93
RPAREN (277) 13 21 68 91 92 93
LBRACKET (278) 20 67
RBRACKET (279) 20 67
COMMA (280) 26 72
LBRACE (281) 83
RBRACE (282) 83
MULT (283) 30 35 64
UAND (284) 29
PLUS (285) 31 38
MINUS (286) 32 39
PERCENTAGE (287)
NOT (288) 33
DIV (289) 36
LT (290) 41
GT (291) 42
QUESTION (292) 53
COLON (293) 53
CHARCONSTANT (294) 18
STRNGLTRL (295) 14
INTCONSTANT (296) 17
LOWER_THAN_ELSE (297)


Nonterminals, with rules where they appear

$accept (43)
    on left: 0
prog (44)
    on left: 1 2, on right: 0 2
translation_unit (45)
    on left: 3 4, on right: 1 2
function_definition (46)
    on left: 5, on right: 3
declaration_list_opt (47)
    on left: 6 7, on right: 5
declaration_list (48)
    on left: 8 9, on right: 6 9
primary_expression (49)
    on left: 10 11 12 13, on right: 19
STRING_LITERAL (50)
    on left: 14, on right: 12
constants (51)
    on left: 15 16, on right: 11
INT_CONSTANT (52)
    on left: 17, on right: 15 67
CHAR_CONSTANT (53)
    on left: 18, on right: 16
postfix_expression (54)
    on left: 19 20 21 22, on right: 20 21 22 27
argument_expression_list_opt (55)
    on left: 23 24, on right: 21
argument_expression_list (56)
    on left: 25 26, on right: 23 26
unary_expression (57)
    on left: 27 28, on right: 28 34 35 36 55
unary_operator (58)
    on left: 29 30 31 32 33, on right: 28
multiplicative_expression (59)
    on left: 34 35 36, on right: 35 36 37 38 39
additive_expression (60)
    on left: 37 38 39, on right: 38 39 40 41 42 43 44
relational_expression (61)
    on left: 40 41 42 43 44, on right: 41 42 43 44 45 46 47
equality_expression (62)
    on left: 45 46 47, on right: 46 47 48 49
logical_and_expression (63)
    on left: 48 49, on right: 49 50 51
logical_or_expression (64)
    on left: 50 51, on right: 51 52 53
conditional_expression (65)
    on left: 52 53, on right: 53 54
assignment_expression (66)
    on left: 54 55, on right: 25 26 55 56 77
expression (67)
    on left: 56, on right: 13 20 53 91 92 95
declaration (68)
    on left: 57, on right: 4 8 9 88
init_declarator (69)
    on left: 58 59, on right: 57
type_specifier (70)
    on left: 60 61 62, on right: 5 57 73
declarator (71)
    on left: 63, on right: 5 58 59
pointer_opt (72)
    on left: 64 65, on right: 63 73
direct_declarator (73)
    on left: 66 67 68, on right: 63
parameter_list_opt (74)
    on left: 69 70, on right: 68
parameter_list (75)
    on left: 71 72, on right: 69 72
parameter_declaration (76)
    on left: 73, on right: 71 72
ID_opt (77)
    on left: 74 75, on right: 73
ID (78)
    on left: 76, on right: 10 22 66 67 68 74
initialiser (79)
    on left: 77, on right: 59
statement (80)
    on left: 78 79 80 81 82, on right: 89 91 92 93
compound_statement (81)
    on left: 83, on right: 5 78
block_item_list_opt (82)
    on left: 84 85, on right: 83
block_item_list (83)
    on left: 86 87, on right: 84 87
block_item (84)
    on left: 88 89, on right: 86 87
expression_statement (85)
    on left: 90, on right: 79
selection_statement (86)
    on left: 91 92, on right: 80
iteration_statement (87)
    on left: 93, on right: 81
jump_statement (88)
    on left: 94, on right: 82
expression_opt (89)
    on left: 95 96, on right: 90 93 94


state 0

    0 $accept: . prog $end

    INT   shift, and go to state 1
    CHAR  shift, and go to state 2
    VOID  shift, and go to state 3

    prog                 go to state 4
    translation_unit     go to state 5
    function_definition  go to state 6
    declaration          go to state 7
    type_specifier       go to state 8


state 1

   60 type_specifier: INT .

    $default  reduce using rule 60 (type_specifier)


state 2

   61 type_specifier: CHAR .

    $default  reduce using rule 61 (type_specifier)


state 3

   62 type_specifier: VOID .

    $default  reduce using rule 62 (type_specifier)


state 4

    0 $accept: prog . $end
    2 prog: prog . translation_unit

    $end  shift, and go to state 9
    INT   shift, and go to state 1
    CHAR  shift, and go to state 2
    VOID  shift, and go to state 3

    translation_unit     go to state 10
    function_definition  go to state 6
    declaration          go to state 7
    type_specifier       go to state 8


state 5

    1 prog: translation_unit .

    $default  reduce using rule 1 (prog)


state 6

    3 translation_unit: function_definition .

    $default  reduce using rule 3 (translation_unit)


state 7

    4 translation_unit: declaration .

    $default  reduce using rule 4 (translation_unit)


state 8

    5 function_definition: type_specifier . declarator declaration_list_opt compound_statement
   57 declaration: type_specifier . init_declarator SEMICOLON

    MULT  shift, and go to state 11

    $default  reduce using rule 65 (pointer_opt)

    init_declarator  go to state 12
    declarator       go to state 13
    pointer_opt      go to state 14


state 9

    0 $accept: prog $end .

    $default  accept


state 10

    2 prog: prog translation_unit .

    $default  reduce using rule 2 (prog)


state 11

   64 pointer_opt: MULT .

    $default  reduce using rule 64 (pointer_opt)


state 12

   57 declaration: type_specifier init_declarator . SEMICOLON

    SEMICOLON  shift, and go to state 15


state 13

    5 function_definition: type_specifier declarator . declaration_list_opt compound_statement
   58 init_declarator: declarator .
   59                | declarator . ASSIGN initialiser

    INT     shift, and go to state 1
    CHAR    shift, and go to state 2
    VOID    shift, and go to state 3
    ASSIGN  shift, and go to state 16

    SEMICOLON  reduce using rule 58 (init_declarator)
    $default   reduce using rule 7 (declaration_list_opt)

    declaration_list_opt  go to state 17
    declaration_list      go to state 18
    declaration           go to state 19
    type_specifier        go to state 20


state 14

   63 declarator: pointer_opt . direct_declarator

    IDENTIFIER  shift, and go to state 21

    direct_declarator  go to state 22
    ID                 go to state 23


state 15

   57 declaration: type_specifier init_declarator SEMICOLON .

    $default  reduce using rule 57 (declaration)


state 16

   59 init_declarator: declarator ASSIGN . initialiser

    IDENTIFIER    shift, and go to state 21
    LPAREN        shift, and go to state 24
    MULT          shift, and go to state 25
    UAND          shift, and go to state 26
    PLUS          shift, and go to state 27
    MINUS         shift, and go to state 28
    NOT           shift, and go to state 29
    CHARCONSTANT  shift, and go to state 30
    STRNGLTRL     shift, and go to state 31
    INTCONSTANT   shift, and go to state 32

    primary_expression         go to state 33
    STRING_LITERAL             go to state 34
    constants                  go to state 35
    INT_CONSTANT               go to state 36
    CHAR_CONSTANT              go to state 37
    postfix_expression         go to state 38
    unary_expression           go to state 39
    unary_operator             go to state 40
    multiplicative_expression  go to state 41
    additive_expression        go to state 42
    relational_expression      go to state 43
    equality_expression        go to state 44
    logical_and_expression     go to state 45
    logical_or_expression      go to state 46
    conditional_expression     go to state 47
    assignment_expression      go to state 48
    ID                         go to state 49
    initialiser                go to state 50


state 17

    5 function_definition: type_specifier declarator declaration_list_opt . compound_statement

    LBRACE  shift, and go to state 51

    compound_statement  go to state 52


state 18

    6 declaration_list_opt: declaration_list .
    9 declaration_list: declaration_list . declaration

    INT   shift, and go to state 1
    CHAR  shift, and go to state 2
    VOID  shift, and go to state 3

    $default  reduce using rule 6 (declaration_list_opt)

    declaration     go to state 53
    type_specifier  go to state 20


state 19

    8 declaration_list: declaration .

    $default  reduce using rule 8 (declaration_list)


state 20

   57 declaration: type_specifier . init_declarator SEMICOLON

    MULT  shift, and go to state 11

    $default  reduce using rule 65 (pointer_opt)

    init_declarator  go to state 12
    declarator       go to state 54
    pointer_opt      go to state 14


state 21

   76 ID: IDENTIFIER .

    $default  reduce using rule 76 (ID)


state 22

   63 declarator: pointer_opt direct_declarator .

    $default  reduce using rule 63 (declarator)


state 23

   66 direct_declarator: ID .
   67                  | ID . LBRACKET INT_CONSTANT RBRACKET
   68                  | ID . LPAREN parameter_list_opt RPAREN

    LPAREN    shift, and go to state 55
    LBRACKET  shift, and go to state 56

    $default  reduce using rule 66 (direct_declarator)


state 24

   13 primary_expression: LPAREN . expression RPAREN

    IDENTIFIER    shift, and go to state 21
    LPAREN        shift, and go to state 24
    MULT          shift, and go to state 25
    UAND          shift, and go to state 26
    PLUS          shift, and go to state 27
    MINUS         shift, and go to state 28
    NOT           shift, and go to state 29
    CHARCONSTANT  shift, and go to state 30
    STRNGLTRL     shift, and go to state 31
    INTCONSTANT   shift, and go to state 32

    primary_expression         go to state 33
    STRING_LITERAL             go to state 34
    constants                  go to state 35
    INT_CONSTANT               go to state 36
    CHAR_CONSTANT              go to state 37
    postfix_expression         go to state 38
    unary_expression           go to state 39
    unary_operator             go to state 40
    multiplicative_expression  go to state 41
    additive_expression        go to state 42
    relational_expression      go to state 43
    equality_expression        go to state 44
    logical_and_expression     go to state 45
    logical_or_expression      go to state 46
    conditional_expression     go to state 47
    assignment_expression      go to state 57
    expression                 go to state 58
    ID                         go to state 49


state 25

   30 unary_operator: MULT .

    $default  reduce using rule 30 (unary_operator)


state 26

   29 unary_operator: UAND .

    $default  reduce using rule 29 (unary_operator)


state 27

   31 unary_operator: PLUS .

    $default  reduce using rule 31 (unary_operator)


state 28

   32 unary_operator: MINUS .

    $default  reduce using rule 32 (unary_operator)


state 29

   33 unary_operator: NOT .

    $default  reduce using rule 33 (unary_operator)


state 30

   18 CHAR_CONSTANT: CHARCONSTANT .

    $default  reduce using rule 18 (CHAR_CONSTANT)


state 31

   14 STRING_LITERAL: STRNGLTRL .

    $default  reduce using rule 14 (STRING_LITERAL)


state 32

   17 INT_CONSTANT: INTCONSTANT .

    $default  reduce using rule 17 (INT_CONSTANT)


state 33

   19 postfix_expression: primary_expression .

    $default  reduce using rule 19 (postfix_expression)


state 34

   12 primary_expression: STRING_LITERAL .

    $default  reduce using rule 12 (primary_expression)


state 35

   11 primary_expression: constants .

    $default  reduce using rule 11 (primary_expression)


state 36

   15 constants: INT_CONSTANT .

    $default  reduce using rule 15 (constants)


state 37

   16 constants: CHAR_CONSTANT .

    $default  reduce using rule 16 (constants)


state 38

   20 postfix_expression: postfix_expression . LBRACKET expression RBRACKET
   21                   | postfix_expression . LPAREN argument_expression_list_opt RPAREN
   22                   | postfix_expression . POINT ID
   27 unary_expression: postfix_expression .

    POINT     shift, and go to state 59
    LPAREN    shift, and go to state 60
    LBRACKET  shift, and go to state 61

    $default  reduce using rule 27 (unary_expression)


state 39

   34 multiplicative_expression: unary_expression .
   55 assignment_expression: unary_expression . ASSIGN assignment_expression

    ASSIGN  shift, and go to state 62

    $default  reduce using rule 34 (multiplicative_expression)


state 40

   28 unary_expression: unary_operator . unary_expression

    IDENTIFIER    shift, and go to state 21
    LPAREN        shift, and go to state 24
    MULT          shift, and go to state 25
    UAND          shift, and go to state 26
    PLUS          shift, and go to state 27
    MINUS         shift, and go to state 28
    NOT           shift, and go to state 29
    CHARCONSTANT  shift, and go to state 30
    STRNGLTRL     shift, and go to state 31
    INTCONSTANT   shift, and go to state 32

    primary_expression  go to state 33
    STRING_LITERAL      go to state 34
    constants           go to state 35
    INT_CONSTANT        go to state 36
    CHAR_CONSTANT       go to state 37
    postfix_expression  go to state 38
    unary_expression    go to state 63
    unary_operator      go to state 40
    ID                  go to state 49


state 41

   35 multiplicative_expression: multiplicative_expression . MULT unary_expression
   36                          | multiplicative_expression . DIV unary_expression
   37 additive_expression: multiplicative_expression .

    MULT  shift, and go to state 64
    DIV   shift, and go to state 65

    $default  reduce using rule 37 (additive_expression)


state 42

   38 additive_expression: additive_expression . PLUS multiplicative_expression
   39                    | additive_expression . MINUS multiplicative_expression
   40 relational_expression: additive_expression .

    PLUS   shift, and go to state 66
    MINUS  shift, and go to state 67

    $default  reduce using rule 40 (relational_expression)


state 43

   41 relational_expression: relational_expression . LT additive_expression
   42                      | relational_expression . GT additive_expression
   43                      | relational_expression . LE additive_expression
   44                      | relational_expression . GE additive_expression
   45 equality_expression: relational_expression .

    LE  shift, and go to state 68
    GE  shift, and go to state 69
    LT  shift, and go to state 70
    GT  shift, and go to state 71

    $default  reduce using rule 45 (equality_expression)


state 44

   46 equality_expression: equality_expression . EQ relational_expression
   47                    | equality_expression . NEQ relational_expression
   48 logical_and_expression: equality_expression .

    EQ   shift, and go to state 72
    NEQ  shift, and go to state 73

    $default  reduce using rule 48 (logical_and_expression)


state 45

   49 logical_and_expression: logical_and_expression . AND equality_expression
   50 logical_or_expression: logical_and_expression .

    AND  shift, and go to state 74

    $default  reduce using rule 50 (logical_or_expression)


state 46

   51 logical_or_expression: logical_or_expression . OR logical_and_expression
   52 conditional_expression: logical_or_expression .
   53                       | logical_or_expression . QUESTION expression COLON conditional_expression

    OR        shift, and go to state 75
    QUESTION  shift, and go to state 76

    $default  reduce using rule 52 (conditional_expression)


state 47

   54 assignment_expression: conditional_expression .

    $default  reduce using rule 54 (assignment_expression)


state 48

   77 initialiser: assignment_expression .

    $default  reduce using rule 77 (initialiser)


state 49

   10 primary_expression: ID .

    $default  reduce using rule 10 (primary_expression)


state 50

   59 init_declarator: declarator ASSIGN initialiser .

    $default  reduce using rule 59 (init_declarator)


state 51

   83 compound_statement: LBRACE . block_item_list_opt RBRACE

    INT           shift, and go to state 1
    CHAR          shift, and go to state 2
    VOID          shift, and go to state 3
    IF            shift, and go to state 77
    FOR           shift, and go to state 78
    RETURN        shift, and go to state 79
    IDENTIFIER    shift, and go to state 21
    LPAREN        shift, and go to state 24
    LBRACE        shift, and go to state 51
    MULT          shift, and go to state 25
    UAND          shift, and go to state 26
    PLUS          shift, and go to state 27
    MINUS         shift, and go to state 28
    NOT           shift, and go to state 29
    CHARCONSTANT  shift, and go to state 30
    STRNGLTRL     shift, and go to state 31
    INTCONSTANT   shift, and go to state 32

    SEMICOLON  reduce using rule 96 (expression_opt)
    $default   reduce using rule 85 (block_item_list_opt)

    primary_expression         go to state 33
    STRING_LITERAL             go to state 34
    constants                  go to state 35
    INT_CONSTANT               go to state 36
    CHAR_CONSTANT              go to state 37
    postfix_expression         go to state 38
    unary_expression           go to state 39
    unary_operator             go to state 40
    multiplicative_expression  go to state 41
    additive_expression        go to state 42
    relational_expression      go to state 43
    equality_expression        go to state 44
    logical_and_expression     go to state 45
    logical_or_expression      go to state 46
    conditional_expression     go to state 47
    assignment_expression      go to state 57
    expression                 go to state 80
    declaration                go to state 81
    type_specifier             go to state 20
    ID                         go to state 49
    statement                  go to state 82
    compound_statement         go to state 83
    block_item_list_opt        go to state 84
    block_item_list            go to state 85
    block_item                 go to state 86
    expression_statement       go to state 87
    selection_statement        go to state 88
    iteration_statement        go to state 89
    jump_statement             go to state 90
    expression_opt             go to state 91


state 52

    5 function_definition: type_specifier declarator declaration_list_opt compound_statement .

    $default  reduce using rule 5 (function_definition)


state 53
